# troubleshooting-performance

./: .gitignore  Dockerfile  Jmeter.jmx  README-ptbr.md  README.md  configure-k8s.sh  docker-compose.yml  generate_threaddump.sh  k6-get-rest-script.js  k6-post-consumer-proxy-script.js  k6-post-grpc-script.js  k6-post-rest-script.js  make.sh  pom.xml  prometheus.yml
analytics/: README.md  Readme.md  pyproject.toml  requirements.txt
analytics/notebooks/: Optimization.ipynb  Testing Prometheus Queries.ipynb
analytics/notebooks/.ipynb_checkpoints/: Optimization-checkpoint.ipynb  Testing Prometheus Queries-checkpoint.ipynb
grafana/: custom-dash-spg.json
k8s/: infra.yaml
k8s/istio-1.9.9/: manifest.yaml
k8s/istio-1.9.9/manifests/charts/base/: Chart.yaml
k8s/istio-1.9.9/manifests/charts/gateways/istio-egress/: Chart.yaml  values.yaml
k8s/istio-1.9.9/manifests/charts/gateways/istio-ingress/: Chart.yaml  values.yaml
k8s/istio-1.9.9/manifests/charts/istio-cni/: Chart.yaml  values.yaml
k8s/istio-1.9.9/manifests/charts/istio-operator/: Chart.yaml  values.yaml
k8s/istio-1.9.9/manifests/charts/istiod-remote/: Chart.yaml  values.yaml
k8s/istio-1.9.9/manifests/profiles/: default.yaml
protos/: stocks.proto
proxy-grpc/: Dockerfile  pom.xml
proxy-grpc/src/main/resources/: application.properties
server/: Dockerfile  pom.xml
server/src/main/java/br/ortiz/: Application.java
server/src/main/resources/: application.properties  ehcache.xml
src/main/resources/: application.properties
stub/: .gitignore  pom.xml
stub/src/main/resources/: stocks.proto
(+26 files in other folders)
