[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["Marcelo Ortiz de Santana <tentativafc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prometheus-api-client = "^0.5.1"
pygad = "^2.17.0"
scikit-learn = "^1.1.1"
requests = "^2.28.1"
numpy = "^1.23.2"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
